fixed overflow scroll and not appearing img

--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .hamburger {
   cursor: pointer;
   width: 24px;
